 * new xbt_cfg_elm_boolean type

 Java:
 * Reintegrate Java to the main archive as desynchronizing these
   package is not acceptable anymore (Java is now considered stable)
 * Bugfix: Task.setDataSize() only changed the C world, not the value
   cached in the Java world

 MSG:
 * Dramatically change the way files are handled. API and internals changed, but
   this part of MSG was not considered as production grade either. 

 SMPI:
 * SMPI is now included directly in the libsimgrid as the windows
   linker dont forces us on splitting it anymore.
 * Improvements of the SMPI replay tool:
   - Most of the collective communications are now rooted in the same process as
     in the original application.
   - Traces now rely on the same MPI datatype as the application (MPI_BYTE was
     used until now). Multiple datatypes can now be used in a trace.
   - The replay tool now supports traces produce either by TAU or a modified
     version of MPE.
   - Bug Fix: the compute part of the reduce action is now taken into account.
 * smpirun generates the hostfile if needed (with given hostcount and platform)

 PLATFORM:
 * Handle units for values (10ms, 10kiloflops, 10Bps, ...)
 * Remove rule based routing (no more pcre dependency)

-- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.9) stable; urgency=low

 The Grasgory release: GRAS is really dead now.

 * Complete overhaul of the internal host structures scheme.

 GRAS:
 * If you use GRAS, you should stay at SimGrid 3.5 (at most) since it
   was considered as experimental and badly maintained since then.
 * Keeping it was thus a trap to our potential users, that could take
   it instead of MSG or SMPI by mistake despite is pity state.
 * GRAS seems to have very few users (if any), and no one volunteered
   to maintain it further. It also induces a lot of XBT code (for
   portability sake), that must be maintained too.
 * For all these reasons, we killed GRAS. If someone wants to revive it