@@ -29,6 +29,7 @@ us before digging into these badly documented internal modules).
    - \ref msg_file_management
    - \ref msg_task_usage
    - \ref msg_VMs
+   - \ref msg_synchro
    - \ref msg_trace_driven
    - \ref MSG_examples
    - \ref msg_deprecated_functions
@@ -90,6 +91,14 @@ details).
  *  @ingroup MSG_API
  *  @brief This section describes the functions that can be used
  *         by a process to execute, communicate or otherwise handle some task.
+ */
+
+/** @defgroup msg_synchro Explicit Synchronization Functions
+ *  @ingroup MSG_API
+ *  @brief This section describes several explicit synchronization
+ *         mechanisms existing in MSG: semaphores (#msg_sem_t) and friends.
+ *
+ * In some situations, these things are very helpful to synchronize processes without message exchanges.
  */
 
 /** @defgroup msg_VMs VMs
